# ml_ci_cd

./: .gitignore  Makefile  pyproject.toml  setup.cfg
.github/actions/build_app/: action.yml
.github/workflows/: lint.yml  workflow.yml
app/: app.py  extensions.py  models.py  nt_apartments.db  settings.py
app/UI/: survey_form.py
app/routes/: auth.py  main.py
app/static/css/: styles.css
app/templates/: dashboard.html  index.html  login.html  peste.html  signup.html
data/: rent_apartments.db
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: __init__.py  db.py  logging.py
src/model/: service.py
src/model/pipeline/: rf_model.py
