[project]
name = "ml_ci_cd"
version = "0.1.0"
description = ""
authors = [
    {name = "jude.msantos@gmail.com",email = "jude.msantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
